--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".draw.DrawGestureActivity"
+            android:name="com.naveentp.gesturebuilder.ui.draw.DrawGestureActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".GestureListActivity"/>
+        <activity android:name="com.naveentp.gesturebuilder.ui.list.GestureListActivity"/>
     </application>
 
 </manifest>
